# streamlit-exploration

./: .pre-commit-config.yaml  Dockerfile  README.md  post_install.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflow/: pullrequest.yaml
.github/workflows/: pullrequest.yaml
src/: main.py
tests/: test_example.py
